--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,11 @@
-title: Stack Problems
-description: My Personal Stack Problems
-author: Agus Makmun
-github: https://github.com/agusmakmun
-about: I'm Programmer for Python & Django. I've made quite a few web apps, especially on Django.
-disqus_shortname: stackproblems
+title: Inefficacious&#58; adj. Lacking the power to produce a desired effect.
+description: A series of angry letters to myself
+author: Inefficacious
+github: https://github.com/inefficacio-us
+about: Actually just a stack of cats wearing a trenchcoat
+disqus_shortname: supernotreal
 google_analytics: UA-XXXXXXXX-Y
+plugins: [jekyll-paginate]
 
 enableTags: true
 tagarray: []
@@ -24,11 +25,11 @@ social:
     - icon: fa-stack-exchange
       link: "#"
     - icon: fa-github
-      link: "https://github.com/agusmakmun"
+      link: "https://github.com/#"
 
 share:
   twitter_username: github.io
-  fb_appid: 1749788565247320
+  fb_appid: 9999999999999999
 
 urls:
     - text: About Me
@@ -38,7 +39,7 @@ urls:
     - text: XML Feed
       url: /feed.xml
 
-url: "https://agusmakmun.github.io"
+url: "https://inefficacio-us.github.io"
 baseurl: ""
 paginate: 20
 per_page: 20
