--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ description: A series of angry letters to myself
 author: Inefficacious
 github: https://github.com/inefficacio-us
 about: Actually just a stack of cats wearing a trenchcoat
-disqus_shortname: supernotreal
-google_analytics: UA-XXXXXXXX-Y
+  # disqus_shortname: supernotreal
+  # google_analytics: UA-XXXXXXXX-Y
 plugins: [jekyll-paginate]
 
 enableTags: true
