--- a/_data/projects.json
+++ b/_data/projects.json
@@ -1,42 +1,18 @@
 [
 	{
-		"slug": "cool-project",
-		"name": "Cool project 1",
-		"image": "placeholder.jpg",
-		"url": "https://www.google.com",
-		"date": "Jan 2014",
-		"tags": ["Angular JS","API"]
+		"slug": "inefficacio-us",
+		"name": "inefficacio.us",
+		"image": "inefficacio-us.jpg",
+		"url": "https://www.inefficacio.us",
+		"date": "Jul 2021",
+		"tags": ["Web","Blog"]
 	},
 	{
-		"name": "Cool project 2",
-		"image": "placeholder.jpg",
-		"url": "#",
-		"date": "May 2014",
-		"tags": ["Python","Django"]
+		"slug": "OSCP",
+		"name": "OSCP",
+		"image": "offsec.svg",
+		"url": "https://www.offensive-security.com",
+		"date": "Feb 2020",
+		"tags": ["OSCP"]
 	},
-	{
-		"name": "Cool project 3",
-		"image": "placeholder.jpg",
-		"url": "#",
-		"date": "June 2014",
-		"tags": ["HTML","JQuery","Django"]
-	},
-	{
-		"name": "Cool project 4",
-		"image": "placeholder.jpg",
-		"date": "Oct 2016",
-		"tags": ["Python","nodejs"]
-	},
-	{
-		"name": "Cool project 5",
-		"image": "placeholder.jpg",
-		"date": "Oct 2016",
-		"tags": ["Python","nodejs"]
-	},
-	{
-		"name": "Cool project 6",
-		"image": "placeholder.jpg",
-		"date": "Oct 2016",
-		"tags": ["Python","nodejs"]
-	}
 ]
