fixed project image. learned about extended attributes along the way

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -2,7 +2,7 @@
 	{
 		"slug": "inefficacio-us",
 		"name": "inefficacio.us",
-		"image": "inefficacio-us.jpg",
+		"image": "inefficacio-us.png",
 		"url": "https://www.inefficacio.us",
 		"date": "Jul 2021",
 		"tags": ["Web","Blog"]
