--- a/_config.yml
+++ b/_config.yml
@@ -32,12 +32,10 @@ collections:
 #   fb_appid: 9999999999999999
 
 urls:
-    - text: About Me
+    - text: About
       url: /about/
-    - text: My Projects
+    - text: Projects
       url: /projects/
-#   - text: XML Feed
-#     url: /feed.xml
 
 url: "https://inefficacio-us.github.io"
 baseurl: ""
